adjustments to make it mobile friendly

--- a/index.html
+++ b/index.html
@@ -432,7 +432,10 @@
                                 <button id="tetrisStartBtn" class="btn btn-primary">Start Game</button>
                             </div>
                         </div>
-                        <p class="game-instructions">↑ Rotate • ← → Move • ↓ Drop • Space: Hard Drop</p>
+                        <p class="game-instructions">
+                            <span class="desktop-controls">↑ Rotate • ← → Move • ↓ Drop • Space: Hard Drop</span>
+                            <span class="mobile-controls">Tap: Rotate • Swipe: Move/Drop</span>
+                        </p>
                     </div>
                 </div>
             </div>
