Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <i class="fas fa-phone"></i>
                     <span>512-514-4525</span>
                 </a>
-                <a href="https://linkedin.com/in/manuel-marin" class="contact-item">
+                <a href="https://www.linkedin.com/in/manuel-marin-b45aa8181/" class="contact-item">
                     <i class="fab fa-linkedin"></i>
                     <span>LinkedIn</span>
                 </a>
