adjustments to work experience

--- a/index.html
+++ b/index.html
@@ -107,62 +107,26 @@
             
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">2025 - Present</div>
+                    <div class="timeline-date">2019 - Present</div>
                     <div class="timeline-content">
                         <h3>Software Architect</h3>
                         <h4>INFICON</h4>
                         <ul>
                             <li>Define and guide architecture of enterprise manufacturing applications</li>
-                            <li>Partner with product owners to shape scalable technical solutions</li>
-                            <li>Mentor developers in architectural thinking and technical growth</li>
-                            <li>Research AI use cases including LLM-based assistant prototypes</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-date">2022 - 2025</div>
-                    <div class="timeline-content">
-                        <h3>Team Lead / Senior Software Engineer</h3>
-                        <h4>INFICON</h4>
-                        <ul>
                             <li>Led a development team building and maintaining .NET and Angular-based solutions</li>
-                            <li>Mentored junior developers, established coding standards, and ensured timely delivery</li>
-                            <li>Built key features hands-on and contributed to architecture decisions</li>
-                            <li>Modernized legacy .NET apps and introduced modular frontend architecture (Angular 15+)</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-date">2020 - 2022</div>
-                    <div class="timeline-content">
-                        <h3>Software Developer II</h3>
-                        <h4>INFICON</h4>
-                        <ul>
-                            <li>Enhanced and supported existing .NET MVC and Angular applications</li>
-                            <li>Took ownership of complex bug fixes, refactoring tasks, and performance improvements</li>
-                            <li>Balanced support duties with core development initiatives</li>
+                            <li>Partner with product owners to shape scalable technical solutions</li>
+                            <li>Modernized legacy .NET apps and introduced modular frontend architecture (Angular)</li>
+                            <li>Research AI use cases including LLM-based assistant prototypes</li>
+                            <li>Mentored developers in architectural thinking and technical growth</li>
                             <li>Refactored legacy components into reusable modules and improved maintainability</li>
+                            <li>Took ownership of complex bug fixes, refactoring tasks, and performance improvements</li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="timeline-item">
-                    <div class="timeline-date">2019 - 2020</div>
-                    <div class="timeline-content">
-                        <h3>Software Developer I</h3>
-                        <h4>INFICON</h4>
-                        <ul>
-                            <li>Focused on bug fixing, feature enhancements, and overall application stability</li>
-                            <li>Participated in Agile planning, sprint execution, and team QA processes</li>
-                            <li>Gained deep familiarity with the codebase and contributed to continuous improvement efforts</li>
-                        </ul>
-                    </div>
-                </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2016 - 2019</div>
+                    <div class="timeline-date">2012 - 2019</div>
                     <div class="timeline-content">
                         <h3>Automation Engineer</h3>
                         <h4>Fluence Bioengineering</h4>
@@ -170,38 +134,13 @@
                             <li>Developed embedded software and automated systems for testing and production</li>
                             <li>Created internal tools to write code to microchips and track assembly line metrics</li>
                             <li>Built custom interfaces for test station control, improving throughput and repeatability</li>
-                            <li>Integrated sensors and automation scripts to validate electrical performance and ensure compliance with test specifications</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-date">2014 - 2016</div>
-                    <div class="timeline-content">
-                        <h3>Engineering Technician</h3>
-                        <h4>Fluence Bioengineering</h4>
-                        <ul>
-                            <li>Supported engineers in the development and testing of automation prototypes for production environments</li>
                             <li>Created automation scripts and diagnostic tools to support hardware integration and reduce manual labor</li>
-                            <li>Calibrated and maintained automated test stations to ensure consistent performance and measurement accuracy</li>
-                            <li>Assisted in collecting, analyzing, and reporting test data to validate new hardware and firmware releases</li>
+                            <li>Integrated sensors and automation scripts to validate electrical performance and ensure compliance with test specifications</li>
+                            <li>Identified and reported process inefficiencies, contributing to several engineering-driven improvements</li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="timeline-item">
-                    <div class="timeline-date">2012 - 2014</div>
-                    <div class="timeline-content">
-                        <h3>Assembly Technician</h3>
-                        <h4>Fluence Bioengineering</h4>
-                        <ul>
-                            <li>Operated and maintained a variety of manufacturing equipment across multiple assembly lines</li>
-                            <li>Followed detailed work instructions and quality standards to ensure consistent product output</li>
-                            <li>Identified and reported process inefficiencies, contributing to several engineering-driven improvements</li>
-                            <li>Supported basic troubleshooting and equipment setup during line transitions and new product builds</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
