--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manuel Marin - Software Architect & AI Engineer</title>
+    <title>Manuel Marin - Software Architect specializing in AI/ML & Robotics</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -38,7 +38,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Manuel Marin</h1>
-            <p class="hero-subtitle">Software Architect | AI Engineer</p>
+            <p class="hero-subtitle">Software Architect specializing in AI/ML & Robotics</p>
             <p class="hero-location"><i class="fas fa-map-marker-alt"></i> Austin, TX</p>
             <p class="hero-description">Seeking a role where I can apply my software engineering experience and growing AI expertise to build intelligent, scalable systems</p>
             <div class="hero-buttons">
@@ -124,7 +124,6 @@
                     </div>
                 </div>
 
-
                 <div class="timeline-item">
                     <div class="timeline-date">2012 - 2019</div>
                     <div class="timeline-content">
@@ -140,7 +139,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
