Add study guide

--- a/index.html
+++ b/index.html
@@ -421,6 +421,10 @@
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2025 Manuel Marin. All rights reserved.</p>
+        <!-- Hidden study access icon -->
+        <a href="study.html" class="study-secret-icon" title="Study Materials">
+            <i class="fas fa-graduation-cap"></i>
+        </a>
     </footer>
 
     <script src="script.js"></script>
