Add code examples

--- a/study.html
+++ b/study.html
@@ -47,7 +47,7 @@
                     <p>Interview Questions</p>
                 </div>
                 <div class="stat-card">
-                    <h3>5</h3>
+                    <h3>6</h3>
                     <p>Tech Categories</p>
                 </div>
                 <div class="stat-card">
@@ -102,6 +102,7 @@
                         <option value="dotnet">.NET/C#</option>
                         <option value="angular">Angular</option>
                         <option value="aiml">AI/ML</option>
+                        <option value="sql">SQL/Oracle</option>
                         <option value="system">System Design</option>
                         <option value="behavioral">Behavioral</option>
                     </select>
@@ -168,6 +169,7 @@
                             <option value="dotnet">.NET/C#</option>
                             <option value="angular">Angular</option>
                             <option value="aiml">AI/ML</option>
+                            <option value="sql">SQL/Oracle</option>
                             <option value="system">System Design</option>
                             <option value="behavioral">Behavioral</option>
                         </select>
@@ -289,6 +291,7 @@
                 <button class="filter-btn" data-filter="dotnet">.NET/C#</button>
                 <button class="filter-btn" data-filter="angular">Angular</button>
                 <button class="filter-btn" data-filter="aiml">AI/ML</button>
+                <button class="filter-btn" data-filter="sql">SQL/Oracle</button>
                 <button class="filter-btn" data-filter="system">System Design</button>
                 <button class="filter-btn" data-filter="behavioral">Behavioral</button>
             </div>
