--- a/study.html
+++ b/study.html
@@ -102,6 +102,7 @@
                         <option value="dotnet">.NET/C#</option>
                         <option value="angular">Angular</option>
                         <option value="aiml">AI/ML</option>
+                        <option value="python">Python</option>
                         <option value="sql">SQL/Oracle</option>
                         <option value="system">System Design</option>
                         <option value="behavioral">Behavioral</option>
@@ -169,6 +170,7 @@
                             <option value="dotnet">.NET/C#</option>
                             <option value="angular">Angular</option>
                             <option value="aiml">AI/ML</option>
+                            <option value="python">Python</option>
                             <option value="sql">SQL/Oracle</option>
                             <option value="system">System Design</option>
                             <option value="behavioral">Behavioral</option>
