add code expanded version

--- a/study.html
+++ b/study.html
@@ -309,6 +309,24 @@
         <p>&copy; 2025 Manuel Marin. All rights reserved.</p>
     </footer>
 
+    <!-- Code Expansion Modal -->
+    <div id="code-modal" class="code-modal">
+        <div class="code-modal-content">
+            <div class="code-modal-header">
+                <h3 class="code-modal-title">Code Example</h3>
+                <button class="code-modal-close">&times;</button>
+            </div>
+            <div class="code-modal-body">
+                <pre><code id="expanded-code"></code></pre>
+            </div>
+            <div class="code-modal-footer">
+                <button class="btn btn-secondary copy-code-btn">
+                    <i class="fas fa-copy"></i> Copy Code
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
     <script src="study-data.js"></script>
     <script src="coding-challenges-data.js"></script>
