--- a/index.html
+++ b/index.html
@@ -402,17 +402,9 @@
             <h2 class="section-title">Get In Touch</h2>
             
             <div class="contact-info">
-                <a href="mailto:m2marin91@gmail.com" class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <span>m2marin91@gmail.com</span>
-                </a>
-                <a href="tel:512-514-4525" class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <span>512-514-4525</span>
-                </a>
-                <a href="https://www.linkedin.com/in/manuel-marin-b45aa8181/" class="contact-item">
+                <a href="https://www.linkedin.com/in/manuel-marin-b45aa8181/" class="contact-item" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-linkedin"></i>
-                    <span>LinkedIn</span>
+                    <span>Connect on LinkedIn</span>
                 </a>
             </div>
         </div>
